# etl-amana

./: .gitignore  .pre-commit.yaml  README.md  docker-compose.yml  example.notebook.ipynb  makefile  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
data_cleaned/: customers_enriched.csv  produits_cleaned.csv
data_src/: clients.csv  clients2.csv  mydatabase.sql  produits.csv  produits.json  transactions.csv  ventes.sql
models/: btc_usd_linear_regression.pkl
src/etl/domain/: entities.py
src/etl/domain/interfaces/: customer_repository.py
src/etl/infrastructure/: crypto_client.py  db_connector.py  real_customer_repository.py
src/etl/notebooks/: Activity_Structure your data.ipynb  ai.ipynb  csv_correction.ipynb  ecommerce.json  ex2_jointures.ipynb  ex3_talend.ipynb  ex4_talend_db.ipynb  list.ipynb  notebook.ipynb
src/etl/notebooks/bored/: ai.ipynb  blackjack.py  h&s.py
src/etl/notebooks/models/: btc_usd_linear_regression.pkl
