[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "etl_amana"
version = "0.1.0"
dependencies = [
  "sqlalchemy",
  "pymysql",
  "psycopg",
  "pandas",
  "matplotlib",
  "seaborn",
  "IPython",
  "ipykernel",
  "pydantic",
  "yfinance",
  "scikit-learn",
  "joblib",
  "numpy",
  ]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "ruff",
]